Fix slider z-index

--- a/assets/styles/components/_slider.scss
+++ b/assets/styles/components/_slider.scss
@@ -103,6 +103,7 @@
     left: 0;
     right: 0;
     top: 50%;
+    z-index: 1;
   }
 
   &__prev, &__next {
